--- a/manifest.json
+++ b/manifest.json
@@ -2,64 +2,32 @@
   "id": "geo-quiz-app",
   "name": "Géo-Quiz - Jeu de Culture Générale",
   "short_name": "Géo-Quiz",
-  "description": "Testez vos connaissances en Géographie et Histoire avec niveaux, XP et défis.",
+  "description": "Testez vos connaissances en Géographie et Histoire avec niveaux et XP.",
   "lang": "fr",
   "dir": "ltr",
 
-  "start_url": "./index.html?source=pwa",
+  "start_url": "./index.html",
   "scope": "./",
 
   "display": "standalone",
-  "display_override": ["standalone", "minimal-ui", "browser"],
-
   "orientation": "portrait-primary",
 
   "background_color": "#0f172a",
   "theme_color": "#00f2fe",
 
   "categories": ["education", "games"],
-
   "prefer_related_applications": false,
 
   "icons": [
     {
       "src": "icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "icons/icon-192-maskable.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     },
     {
       "src": "icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "icons/icon-512-maskable.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
-  ],
-
-  "screenshots": [
-    {
-      "src": "screenshots/mobile1.png",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "screenshots/mobile2.png",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "form_factor": "narrow"
+      "type": "image/png"
     }
   ]
 }
